Fixed logo to fit at lower resolutions. Search button doesn't get cut off at lower resolutions. Navigation menu works now. Removed incorrect 'placeholder' attribute on 'select' tag

--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ main img {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .item {
@@ -139,7 +140,7 @@ form button {
   color: #fff;
   font-size: 24px;
   padding: 15px;
-  width: 100%;
+  width: auto;
 }
 
 /* -------  Footer ------- */
@@ -155,6 +156,12 @@ footer p {
 }
 
 /* -------  Media Query ------- */
+@media all and (max-width: 360px) {
+  .logo {
+    font-size: 50px;
+  }
+}
+
 @media all and (min-width: 480px) {
 
   header {
